--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         <text dy="-2">
             <textPath style="font-family: fantasy;" xlink:href="#partialPath" startOffset="12">
                 Happy Women's Day
-                🌷................Ngu Ngon 😘................... 阮阳河贞 !............................................祝你三八节快乐!..................................................................
+                🌷................Ngu Ngon 😘................... 阮阳河贞 !.................................祝你三八节快乐!..................................................................
             </textPath>
         </text>
 
